2005-04-30  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Update autoconf usage to be more correct.
	  Get rid of SKSTREAM_VERSION.

	* NEWS: Add last release for completeness.

2004-03-03  Al Riddoch  <alriddoch@zepler.org>

	* skstream/skstream.h, skstream/skstream.cpp: Add a virtual
	  destructor to basic_socket interface.

2004-01-14  Al Riddoch  <alriddoch@zepler.org>

	* test/basicskstreamtest.h: Socket buffers are now automatically
	  deleted by the socket streams which own them.

2004-12-31  Al Riddoch  <alriddoch@zepler.org>

	* skstream.spec.in: Update spec with License URL Package Vendor
	  and Distribution tags.

2004-12-06  Al Riddoch  <alriddoch@zepler.org>

	* skstream/skstream.cpp, skstream/skserver.cpp: Fix an issue with
	  shutdown arguments being different in windows.

2004-11-30  Al Riddoch  <alriddoch@zepler.org>

	* Release 0.3.3, interface version 1.0.0.

2004-11-29  Al Riddoch  <alriddoch@zepler.org>

	* skstream/skstream.h, skstream/skstream.cpp: Inline operator!
	  and timeout as they don't need to be virtual. Don't inline
	  open() as its too big. Make setOutpeer return void, as the returned
	  bool value was useless and ignored.

2004-11-24  Al Riddoch  <alriddoch@zepler.org>

	* skstream/skstream.cpp, skstream/skstream.h, skstream/skstream_unix.h:
	  Re-work the way stream buffer objects are created so they are
	  allocated in the super class using new, and passed to the base
	  where they are deleted in the destructor. This ensures that the
	  stream buffer is never used un-initialised, or after destruction.
	  Move some lengthy constructors into the .cpp file.

	* configure.ac: Increment version and interface so applications can
	  ensure they get the updated API.

2004-11-23  Al Riddoch  <alriddoch@zepler.org>

	* skstream/skserver.cpp, skstream/skserver.h,
	  skstream/skstream.cpp, skstream/skstream.h:
	  Re-purpose the shutdown() method of various classes
	  so it no longer closes the socket. This makes it more consistent